# koshu-io

koshu-io/: koshu-io.cabal
koshu-io-command/: IOLIST  IOLIST.md  iolist.hs  koshu-io-command.cabal  koshu-io.hs
koshu-io-command/test/a/: IOLIST  IOLIST.md
koshu-io-command/test/a/a2/: IOLIST  IOLIST.md  a.k  calc.k
koshu-io-command/test/a/a3/: IOLIST.md
koshu-io-command/test/b/: IOLIST.md
koshu-io-command/test/b/b1/: IOLIST  IOLIST.md
koshu-io-command/test/b/b2/: IOLIST.md  b.k
koshu-io-command/test/b/b3/: IOLIST.md
koshu-io/Koshucode/IOList/: Param.hs
koshu-io/Koshucode/IOList/IOList/: Section.hs
koshu-io/Koshucode/IOList/Operation/: Run.hs  Summary.hs
koshu-io/Koshucode/IOList/Utility/: FilePath.hs  ForFiles.hs  Put.hs
koshu-io/Koshucode/KoshuIO/: IOList.hs  Main.hs  Operate.hs  Operation.hs  Param.hs  Status.hs  Utility.hs
koshu-io/Koshucode/KoshuIO/IOList/: Doc.hs  File.hs  IOList.hs  Markdown.hs  Section.hs
koshu-io/Koshucode/KoshuIO/Operation/: Diff.hs  Init.hs  Regress.hs  Run.hs  Summary.hs
koshu-io/Koshucode/KoshuIO/Utility/: Assoc.hs  Command.hs  FileDirs.hs  FilePath.hs  ForFiles.hs  Put.hs  Script.hs
koshu-iolist/: koshu-iolist.cabal
koshu-iolist-cmd/: IOLIST  IOLIST.md  iolist.hs  koshu-iolist-cmd.cabal
koshu-iolist-cmd/test/a/: IOLIST.md
koshu-iolist-cmd/test/a/a2/: IOLIST.md
koshu-iolist-cmd/test/b/: IOLIST  IOLIST.md
koshu-iolist-cmd/test/b/b1/: IOLIST.md  calc.k
koshu-iolist-cmd/test/b/b3/: IOLIST.md
koshu-iolist/Koshucode/IOList/: Assoc.hs  File.hs  IOList.hs  Main.hs  Op.hs  Operate.hs  Operation.hs  Output.hs  Param.hs  Parts.hs  Script.hs  Status.hs  Utility.hs
koshu-iolist/Koshucode/IOList/File/: FileDirs.hs  FilePath.hs  ForFiles.hs
koshu-iolist/Koshucode/IOList/IOList/: Doc.hs  File.hs  IOList.hs  Markdown.hs  Section.hs
koshu-iolist/Koshucode/IOList/Op/: Diff.hs  Init.hs  Put.hs  Regress.hs  Run.hs  Summary.hs
koshu-iolist/Koshucode/IOList/Operation/: Diff.hs  Init.hs  Regress.hs  Run.hs  Summary.hs
koshu-iolist/Koshucode/IOList/Output/: Doc.hs  File.hs  IOList.hs  Markdown.hs  Section.hs
koshu-iolist/Koshucode/IOList/Parts/: Assoc.hs  Operation.hs  Param.hs  Script.hs  Status.hs
koshu-iolist/Koshucode/IOList/Utility/: Assoc.hs  FileDirs.hs  FilePath.hs  Put.hs  Script.hs
