name:                koshu-io-command
version:             0.1.0.0
synopsis:            A command-line tool for I/O lists
-- description:         
license:             BSD3
license-file:        LICENSE
author:              SEINO Katsuhiro
-- maintainer:          
copyright:           2016, SEINO Katsuhiro
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

executable koshu-io
  main-is:             koshu-io.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base           >= 4.7 && < 4.8
                     , koshu-io       == 0.*
  -- hs-source-dirs:      
  default-language:    Haskell2010

