name:                koshu-io-command
version:             0.1.0.0
synopsis:            A command-line tool for I/O lists
-- description:         
license:             BSD3
license-file:        LICENSE
author:              SEINO Katsuhiro
-- maintainer:          
copyright:           2016, SEINO Katsuhiro
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

executable iolist
  main-is:             iolist.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base           == 4.*
                     , koshu-iolist   == 0.*
  -- hs-source-dirs:      
  default-language:    Haskell2010

