name:                koshu-iolist
version:             0.1.0.0
synopsis:            Generate and compare I/O lists
-- description:         
license:             BSD3
license-file:        LICENSE
author:              SEINO Katsuhiro
maintainer:          
copyright:           2016, SEINO Katsuhiro
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  -- Modules exported by the library.
  exposed-modules:
         Koshucode.IOList.IOList
       , Koshucode.IOList.IOList.Doc
       , Koshucode.IOList.IOList.File
       , Koshucode.IOList.IOList.IOList
       , Koshucode.IOList.IOList.Markdown
       , Koshucode.IOList.IOList.Section

       , Koshucode.IOList.Main

       , Koshucode.IOList.Operation
       , Koshucode.IOList.Operation.Diff
       , Koshucode.IOList.Operation.Init
       , Koshucode.IOList.Operation.Regress
       , Koshucode.IOList.Operation.Run
       , Koshucode.IOList.Operation.Summary

       , Koshucode.IOList.Operate
       , Koshucode.IOList.Param
       , Koshucode.IOList.Status

       , Koshucode.IOList.Utility
       , Koshucode.IOList.Utility.Assoc
       , Koshucode.IOList.Utility.FileDirs
       , Koshucode.IOList.Utility.FilePath
       , Koshucode.IOList.Utility.ForFiles
       , Koshucode.IOList.Utility.Put
       , Koshucode.IOList.Utility.Script

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.*
       , bytestring            == 0.*
       , dates                 == 0.*
       , Diff                  == 0.*
       , directory             >= 1.2.5
       , filepath              == 1.*
       , Glob                  == 0.*
       , process-extras        == 0.*
       , koshucode-baala-base  >= 0.150

  ghc-options:         -Wall

  -- hs-source-dirs:      
  default-language:    Haskell2010

