name:                koshu-iolist
version:             0.1.0.0
synopsis:            Generate and compare I/O lists
-- description:         
license:             BSD3
license-file:        LICENSE
author:              SEINO Katsuhiro
maintainer:          
copyright:           2016, SEINO Katsuhiro
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  -- Modules exported by the library.
  exposed-modules:
         Koshucode.IOList.Assoc
       , Koshucode.IOList.Main
       , Koshucode.IOList.Operation
       , Koshucode.IOList.Param
       , Koshucode.IOList.Status
       , Koshucode.IOList.Script

       , Koshucode.IOList.File
       , Koshucode.IOList.File.FileDirs
       , Koshucode.IOList.File.FilePath
       , Koshucode.IOList.File.ForFiles

       , Koshucode.IOList.Op
       , Koshucode.IOList.Op.Diff
       , Koshucode.IOList.Op.Init
       , Koshucode.IOList.Op.Put
       , Koshucode.IOList.Op.Regress
       , Koshucode.IOList.Op.Run
       , Koshucode.IOList.Op.Summary

       , Koshucode.IOList.Output
       , Koshucode.IOList.Output.Doc
       , Koshucode.IOList.Output.File
       , Koshucode.IOList.Output.IOList
       , Koshucode.IOList.Output.Markdown
       , Koshucode.IOList.Output.Section

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.*
       , bytestring            == 0.*
       , dates                 == 0.*
       , Diff                  == 0.*
       , directory             >= 1.2.5
       , filepath              == 1.*
       , Glob                  == 0.*
       , process-extras        == 0.*
       , koshucode-baala-base  >= 0.150

  ghc-options:         -Wall

  -- hs-source-dirs:      
  default-language:    Haskell2010

